# yacl

./: README.md  pyproject.toml
examples/: control-flow.jacl  todo.pulpo  values.jacl
examples/assembly/: basic.ybc
examples/pulpo/: media-catalog.pulpo
tests/: test_interpreter.py
tests/interpreter/: test_interpreter.py
yacl/: __init__.py  assembler.py  example.asm  interpreter.py  stack.py  vm.py
yavm/: __init__.py  storage.py
yavm/interpreter/: __init__.py  interpreter.py
yavm/vm/: __init__.py  assembler.py  vm.py
